widget/TestOverview: fixed text expand/collapse animation

--- a/css-sass/view/widget/_test-overview.scss
+++ b/css-sass/view/widget/_test-overview.scss
@@ -18,7 +18,10 @@
 
     .more {
         display: none;
-        margin-top: 20px;
+
+        p {
+            margin-top: 20px;
+        }
     }
 
     .widget-arrow {
